Add links to object detection models. Update measurements README.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -645,6 +645,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Image classification"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -725,35 +732,91 @@
     "        for resolution in [ 224, 192, 160, 128, 96 ]:\n",
     "            add_implementation_mobilenet(implementation_benchmarks, version, multiplier, resolution)\n",
     "    add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.3, resolution=224)\n",
-    "    add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)\n",
-    "\n",
+    "    add_implementation_mobilenet(implementation_benchmarks, version=2, multiplier=1.4, resolution=224)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Object detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_detection_benchmarks = {\n",
+    "    'rcnn-nas-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-NAS lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_nas_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "    },\n",
+    "    'rcnn-resnet50-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-ResNet50 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet50_lowproposals_coco_2018_01_28.tar.gz\"\n",
+    "    },  \n",
+    "    'rcnn-resnet101-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-ResNet101 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet101_lowproposals_coco_2018_01_28.tar.gz\"\n",
+    "    },\n",
+    "    'rcnn-inception-resnet-v2-lowproposals' : {\n",
+    "        \"name\" : \"Faster-RCNN-Inception-ResNet-v2 lowproposals\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_resnet_v2_atrous_lowproposals_coco_2018_01_28.tar.gz\"\n",
+    "    },\n",
+    "    'rcnn-inception-v2' : {\n",
+    "        \"name\" : \"Faster-RCNN Inception-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz\"\n",
+    "    },\n",
+    "    'ssd-inception-v2' : {\n",
+    "        \"name\" : \"SSD-Inception-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_inception_v2_coco_2018_01_28.tar.gz\"\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-quantized-mlperf' : {\n",
+    "        \"name\" : \"MLPerf SSD-MobileNet\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3361502/files/ssd_mobilenet_v1_coco_2018_01_28.tar.gz\",\n",
+    "        \"provenance\" : \"Google\",\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-non-quantized-mlperf' : {\n",
+    "        \"name\" : \"MLPerf SSD-MobileNet quantized\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3252084/files/mobilenet_v1_ssd_8bit_finetuned.tar.gz\",\n",
+    "        \"provenance\" : \"Habana\"\n",
+    "    },\n",
+    "    'ssd-mobilenet-v1-fpn' : {\n",
+    "        \"name\" : \"SSD-MobileNet-v1 FPN SBP\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "    },\n",
+    "    'ssd-resnet50-fpn' : {\n",
+    "        \"name\" : \"SSD-ResNet50-v1 FPN SBP\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_resnet50_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "    },\n",
+    "    'ssdlite-mobilenet-v2' : {\n",
+    "        \"name\" : \"SSDLite-MobileNet-v2\",\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssdlite_mobilenet_v2_coco_2018_05_09.tar.gz\",\n",
+    "    },\n",
+    "    'yolo-v3' : {\n",
+    "        \"name\" : \"YOLO-v3\",\n",
+    "        \"url\" : \"https://zenodo.org/record/3386327/files/yolo_v3_coco.tar.gz\",\n",
+    "        \"provenance\" : \"https://github.com/YunYang1994/tensorflow-yolov3/\"\n",
+    "    }\n",
+    "}\n",
     "    \n",
     "# For each object detection implementation.\n",
     "for implementation in [ 'mlperf-inference-vision' ]:\n",
-    "    for benchmark in [ \\\n",
-    "        'rcnn-nas-lowproposals', \\\n",
-    "        'rcnn-resnet50-lowproposals', \\\n",
-    "        'rcnn-resnet101-lowproposals', \\\n",
-    "        'rcnn-inception-resnet-v2-lowproposals', \\\n",
-    "        'rcnn-inception-v2', \\\n",
-    "        'ssd-inception-v2', \\\n",
-    "        'ssd-mobilenet-v1-quantized-mlperf', \\\n",
-    "        'ssd-mobilenet-v1-non-quantized-mlperf', \\\n",
-    "        'ssd-mobilenet-v1-fpn', \\\n",
-    "        'ssd-resnet50-fpn', \\\n",
-    "        'ssdlite-mobilenet-v2', \\\n",
-    "        'yolo-v3' ]:\n",
+    "    for benchmark in object_detection_benchmarks.keys():\n",
     "        implementation_benchmark = implementation+'-'+benchmark\n",
     "        implementation_benchmarks[implementation_benchmark] = {\n",
     "            \"input_data_types\": \"fp32\",\n",
     "            \"weight_data_types\": \"fp32\",\n",
     "            \"retraining\": \"no\",\n",
-    "            \"starting_weights_filename\": \"TODO\",\n",
+    "            \"starting_weights_filename\": object_detection_benchmarks[benchmark]['url'],\n",
+    "#            \"name\" : object_detection_benchmarks[benchmark]['name'], # submission checker complains about \"unknwon field name\"\n",
     "            \"weight_transformations\": \"None (TensorFlow)\"\n",
     "        }\n",
-    "    \n",
-    "from pprint import pprint\n",
-    "pprint(implementation_benchmarks)"
+    "\n",
+    "# from pprint import pprint\n",
+    "# pprint(implementation_benchmarks)"
    ]
   },
   {
@@ -825,11 +888,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: update for object detection.\n",
     "measurements_readmes = {}\n",
+    "task = 'image-classification'\n",
     "for division_upper in [ 'Closed', 'Open' ]:\n",
     "    division_lower = division_upper.lower()\n",
-    "    measurements_readmes[division_lower] = '''# MLPerf Inference - {} Division - Image Classification\n",
+    "    measurements_readmes[division_lower+'-'+task] = '''# MLPerf Inference - {} Division - Image Classification\n",
     "\n",
     "We performed our measurements using automated, customizable, portable and reproducible\n",
     "[Collective Knowledge](http://cknowledge.org) workflows. Our workflows automatically\n",
@@ -840,7 +903,7 @@
     "\n",
     "As CK is always evolving, it is hard to pin particular revisions of all repositories.\n",
     "\n",
-    "The most relevant repositories and their latest revisions on the submission date:\n",
+    "The most relevant repositories and their latest revisions on the submission date (11/Oct/2019):\n",
     "- [ck-mlperf](https://github.com/ctuning/ck-mlperf) @ [ee77cfd](https://github.com/ctuning/ck-mlperf/commit/ee77cfd3ddfa30739a8c2f483fe9ba83a233a000) (contains programs integrated with LoadGen, model packages and scripts).\n",
     "- [ck-env](https://github.com/ctuning/ck-env) @ [f9ac337](https://github.com/ctuning/ck-env/commit/f9ac3372cdc82fa46b2839e45fc67848ab4bac03) (contains dataset descriptions, preprocessing methods, etc.)\n",
     "- [ck-tensorflow](https://github.com/ctuning/ck-tensorflow) @ [eff8bec](https://github.com/ctuning/ck-tensorflow/commit/eff8bec192021162e4a336dbd3e795afa30b7d26) (contains TFLite packages).\n",
@@ -848,6 +911,32 @@
     "\n",
     "## Links\n",
     "- [Bash script](https://github.com/ctuning/ck-mlperf/tree/master/script/mlperf-inference-v0.5.{}.image-classification) used to invoke benchmarking on Linux systems or Android devices.\n",
+    "'''.format(division_upper, division_lower)\n",
+    "    \n",
+    "    \n",
+    "task = 'object-detection'\n",
+    "for division_upper in [ 'Closed', 'Open' ]:\n",
+    "    division_lower = division_upper.lower()\n",
+    "    measurements_readmes[division_lower+'-'+task] = '''# MLPerf Inference - {} Division - Object Detection\n",
+    "\n",
+    "We performed our measurements using automated, customizable, portable and reproducible\n",
+    "[Collective Knowledge](http://cknowledge.org) workflows. Our workflows automatically\n",
+    "install dependencies (models, datasets, etc.), preprocess input data in the correct way,\n",
+    "and so on.\n",
+    "\n",
+    "## CK repositories\n",
+    "\n",
+    "As CK is always evolving, it is hard to pin particular revisions of all repositories.\n",
+    "\n",
+    "The most relevant repositories and their latest revisions on the submission date (18/Oct/2019):\n",
+    "\n",
+    "- [ck-mlperf](https://github.com/ctuning/ck-mlperf) @ [ef1fced](https://github.com/ctuning/ck-mlperf/commit/ef1fcedd495fd03b5ad6d62d62c8ba271854f2ad) (contains the CK program wrapper, MLPerf SSD-MobileNet model packages and scripts).\n",
+    "- [ck-object-detection](https://github.com/ctuning/ck-object-detection) @ [780d328](https://github.com/ctuning/ck-object-detection/commit/780d3288ec19656cb60c5ad39b2486bbf0fbf97a) (contains most model packages)\n",
+    "- [ck-env](https://github.com/ctuning/ck-env) @ [da3df43](https://github.com/ctuning/ck-env/commit/da3df43e77e7a71f76d3f39338fe58682d3d9768) (contains dataset descriptions, preprocessing methods, etc.)\n",
+    "\n",
+    "## Links\n",
+    "- [Docker image with instructions](https://github.com/ctuning/ck-mlperf/tree/master/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04).\n",
+    "- [Bash script](https://github.com/ctuning/ck-mlperf/tree/master/script/mlperf-inference-v0.5.{}.object-detection) used to invoke benchmarking via the Docker image.\n",
     "'''.format(division_upper, division_lower)"
    ]
   },
@@ -1761,16 +1850,16 @@
     "                print('  |_ %s [DEFAULT]' % system_implementation_json_name)\n",
     "                raise \"Default implementation!\"\n",
     "        \n",
-    "        # Create 'README.md' based on the division (basically, mentions a division-specific script).\n",
+    "        # Create 'README.md' based on the division and task (basically, mentions a division- and task-specific script).\n",
     "        measurements_readme_name = 'README.md'\n",
     "        measurements_readme_path = os.path.join(scenario_dir, measurements_readme_name)\n",
-    "        measurements_readme = measurements_readmes.get(division, '')\n",
+    "        measurements_readme = measurements_readmes.get(division+'-'+task, '')\n",
     "        if measurements_readme != '':\n",
     "            with open(measurements_readme_path, 'w') as measurements_readme_file:\n",
     "                measurements_readme_file.writelines(measurements_readme)\n",
-    "            print('  |_ %s [for %s division]' % (measurements_readme_name, division))\n",
+    "            print('  |_ %s [for %s %s]' % (measurements_readme_name, division, task))\n",
     "        else:\n",
-    "            raise \"Invalid measurements readme!\"\n",
+    "            raise \"Invalid measurements README!\"\n",
     "        \n",
     "        # Copy 'user.conf' from implementation source.\n",
     "        user_conf_name = 'user.conf'\n",
