Add width and height. Dump human-readable results as CSV file.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -752,52 +752,76 @@
     "    'rcnn-nas-lowproposals' : {\n",
     "        \"name\" : \"Faster-RCNN-NAS lowproposals\",\n",
     "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_nas_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1200,\n",
+    "        \"height\" : 1200,\n",
     "    },\n",
     "    'rcnn-resnet50-lowproposals' : {\n",
     "        \"name\" : \"Faster-RCNN-ResNet50 lowproposals\",\n",
-    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet50_lowproposals_coco_2018_01_28.tar.gz\"\n",
-    "    },  \n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet50_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
+    "    },\n",
     "    'rcnn-resnet101-lowproposals' : {\n",
     "        \"name\" : \"Faster-RCNN-ResNet101 lowproposals\",\n",
-    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet101_lowproposals_coco_2018_01_28.tar.gz\"\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_resnet101_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
     "    },\n",
     "    'rcnn-inception-resnet-v2-lowproposals' : {\n",
     "        \"name\" : \"Faster-RCNN-Inception-ResNet-v2 lowproposals\",\n",
-    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_resnet_v2_atrous_lowproposals_coco_2018_01_28.tar.gz\"\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_resnet_v2_atrous_lowproposals_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
     "    },\n",
     "    'rcnn-inception-v2' : {\n",
     "        \"name\" : \"Faster-RCNN Inception-v2\",\n",
-    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz\"\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/faster_rcnn_inception_v2_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 1024,\n",
+    "        \"height\" : 600,\n",
     "    },\n",
     "    'ssd-inception-v2' : {\n",
     "        \"name\" : \"SSD-Inception-v2\",\n",
-    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_inception_v2_coco_2018_01_28.tar.gz\"\n",
+    "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_inception_v2_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
     "    },\n",
     "    'ssd-mobilenet-v1-quantized-mlperf' : {\n",
     "        \"name\" : \"MLPerf SSD-MobileNet\",\n",
     "        \"url\" : \"https://zenodo.org/record/3361502/files/ssd_mobilenet_v1_coco_2018_01_28.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
     "        \"provenance\" : \"Google\",\n",
     "    },\n",
     "    'ssd-mobilenet-v1-non-quantized-mlperf' : {\n",
     "        \"name\" : \"MLPerf SSD-MobileNet quantized\",\n",
     "        \"url\" : \"https://zenodo.org/record/3252084/files/mobilenet_v1_ssd_8bit_finetuned.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
     "        \"provenance\" : \"Habana\"\n",
     "    },\n",
     "    'ssd-mobilenet-v1-fpn' : {\n",
     "        \"name\" : \"SSD-MobileNet-v1 FPN SBP\",\n",
     "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_mobilenet_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "        \"width\" : 640,\n",
+    "        \"height\" : 640,\n",
     "    },\n",
     "    'ssd-resnet50-fpn' : {\n",
     "        \"name\" : \"SSD-ResNet50-v1 FPN SBP\",\n",
     "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssd_resnet50_v1_fpn_shared_box_predictor_640x640_coco14_sync_2018_07_03.tar.gz\",\n",
+    "        \"width\" : 640,\n",
+    "        \"height\" : 640,\n",
     "    },\n",
     "    'ssdlite-mobilenet-v2' : {\n",
     "        \"name\" : \"SSDLite-MobileNet-v2\",\n",
     "        \"url\" : \"http://download.tensorflow.org/models/object_detection/ssdlite_mobilenet_v2_coco_2018_05_09.tar.gz\",\n",
+    "        \"width\" : 300,\n",
+    "        \"height\" : 300,\n",
     "    },\n",
     "    'yolo-v3' : {\n",
     "        \"name\" : \"YOLO-v3\",\n",
     "        \"url\" : \"https://zenodo.org/record/3386327/files/yolo_v3_coco.tar.gz\",\n",
+    "        \"width\" : 416,\n",
+    "        \"height\" : 416,\n",
     "        \"provenance\" : \"https://github.com/YunYang1994/tensorflow-yolov3/\"\n",
     "    }\n",
     "}\n",
@@ -932,7 +956,7 @@
     "\n",
     "- [ck-mlperf](https://github.com/ctuning/ck-mlperf) @ [ef1fced](https://github.com/ctuning/ck-mlperf/commit/ef1fcedd495fd03b5ad6d62d62c8ba271854f2ad) (contains the CK program wrapper, MLPerf SSD-MobileNet model packages and scripts).\n",
     "- [ck-object-detection](https://github.com/ctuning/ck-object-detection) @ [780d328](https://github.com/ctuning/ck-object-detection/commit/780d3288ec19656cb60c5ad39b2486bbf0fbf97a) (contains most model packages)\n",
-    "- [ck-env](https://github.com/ctuning/ck-env) @ [da3df43](https://github.com/ctuning/ck-env/commit/da3df43e77e7a71f76d3f39338fe58682d3d9768) (contains dataset descriptions, preprocessing methods, etc.)\n",
+    "- [ck-env](https://github.com/ctuning/ck-env) @ [5af9fbd](https://github.com/ctuning/ck-env/commit/5af9fbd93ad6c6465b631716645ad9442a333442) (contains dataset descriptions, preprocessing methods, etc.)\n",
     "\n",
     "## Links\n",
     "- [Docker image with instructions](https://github.com/ctuning/ck-mlperf/tree/master/docker/mlperf-inference-vision-with-ck.tensorrt.ubuntu-18.04).\n",
@@ -2022,10 +2046,11 @@
     "#repos = repos_merged\n",
     "repos = [\n",
     "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "    'mlperf-inference-vision-experiments.cpu_cuda'\n",
+    "    #'mlperf-inference-vision-experiments.cpu_cuda'\n",
+    "    'mlperf-inference-vision-experiments.tensorrt'\n",
     "]\n",
-    "for repo_uoa in repos:\n",
-    "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
+    "# for repo_uoa in repos:\n",
+    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
     "    \n",
     "print(\"*\" * 100)\n",
     "submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
@@ -2049,6 +2074,76 @@
     "        checker_log_file.writelines(checker_log)\n",
     "        print(results_dir)\n",
     "        print('  |_%s' % checker_log_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate human-readable results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "division = 'open'\n",
+    "submitter = 'dividiti'\n",
+    "scenario = 'singlestream'\n",
+    "results_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'results')\n",
+    "results = []\n",
+    "results.append('division,submitter,task,system,benchmark,width,height,scenario,time_ms,accuracy_pc')\n",
+    "\n",
+    "for system in os.listdir(results_dir):\n",
+    "    if system=='compliance_checker_log.txt': continue    \n",
+    "    system_dir = os.path.join(results_dir, system)\n",
+    "    for benchmark in os.listdir(system_dir):\n",
+    "        if benchmark=='compliance_checker_log.txt': continue    \n",
+    "        benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "        scenario = 'singlestream'\n",
+    "        experiment_dir = os.path.join(benchmark_dir, scenario)\n",
+    "        # Extract accuracy in percent.\n",
+    "        accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
+    "        with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
+    "            accuracy_txt = accuracy_file.readlines()\n",
+    "            accuracy_line = accuracy_txt[-1]\n",
+    "        if accuracy_line.startswith('mAP'):\n",
+    "            task = 'object-detection'\n",
+    "            match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        elif accuracy_line.startswith('accuracy'):\n",
+    "            task = 'image-classification'\n",
+    "            match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        # Extract 90th percentile.\n",
+    "        performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
+    "        with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
+    "            summary_txt = summary_file.readlines()\n",
+    "            time_ns = int(summary_txt[6].split(':')[1].strip())\n",
+    "            time_ms = time_ns * 1e-6\n",
+    "        benchmark_dict = object_detection_benchmarks.get(benchmark)\n",
+    "        if benchmark_dict:\n",
+    "            width = benchmark_dict['width']\n",
+    "            height = benchmark_dict['height']\n",
+    "        else:\n",
+    "            if benchmark.endswith('96'):\n",
+    "                side = 96\n",
+    "            elif benchmark.endswith('128'):\n",
+    "                side = 128\n",
+    "            elif benchmark.endswith('160'):\n",
+    "                side = 160\n",
+    "            elif benchmark.endswith('192'):\n",
+    "                side = 192\n",
+    "            else:\n",
+    "                side = 224\n",
+    "            width = side\n",
+    "            height = side\n",
+    "        result = '{},{},{},{},{},{},{},{},{:.01f},{:.03f}'.format(division,submitter,task,system,benchmark,width,height,scenario,time_ms,accuracy_pc)\n",
+    "        results.append(result)\n",
+    "with open('dividiti-open-results.csv', 'w') as results_file:\n",
+    "    results_file.write('\\n'.join(results))"
    ]
   }
  ],
