--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -2145,6 +2145,132 @@
     "with open('dividiti-open-results.csv', 'w') as results_file:\n",
     "    results_file.write('\\n'.join(results))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate human-readable results (take 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "division = 'open'\n",
+    "submitter = 'dividiti'\n",
+    "scenario = 'singlestream'\n",
+    "results_dir = os.path.join(path, 'submissions_inference_0_5', division, submitter, 'results')\n",
+    "results = []\n",
+    "# results.append('division,submitter,task,system,benchmark,width,height,scenario,time_ms,accuracy_pc')\n",
+    "\n",
+    "for system in os.listdir(results_dir):\n",
+    "    if system=='compliance_checker_log.txt': continue    \n",
+    "    system_dir = os.path.join(results_dir, system)\n",
+    "    for benchmark in os.listdir(system_dir):\n",
+    "        if benchmark=='compliance_checker_log.txt': continue    \n",
+    "        benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "        scenario = 'singlestream'\n",
+    "        experiment_dir = os.path.join(benchmark_dir, scenario)\n",
+    "        # Extract accuracy in percent.\n",
+    "        accuracy_dir = os.path.join(experiment_dir, 'accuracy')\n",
+    "        with open(os.path.join(accuracy_dir, 'accuracy.txt'), 'r') as accuracy_file:\n",
+    "            accuracy_txt = accuracy_file.readlines()\n",
+    "            accuracy_line = accuracy_txt[-1]\n",
+    "        if accuracy_line.startswith('mAP'):\n",
+    "            task = 'object-detection'\n",
+    "            match = re.match('mAP\\=([\\d\\.]+)\\%', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        elif accuracy_line.startswith('accuracy'):\n",
+    "            task = 'image-classification'\n",
+    "            match = re.match('accuracy=(.+)%, good=(\\d+), total=(\\d+)', accuracy_line)\n",
+    "            accuracy_pc = float(match.group(1))\n",
+    "        # Extract 90th percentile.\n",
+    "        performance_dir = os.path.join(experiment_dir, 'performance', 'run_1')\n",
+    "        with open(os.path.join(performance_dir, 'mlperf_log_summary.txt'), 'r') as summary_file:\n",
+    "            summary_txt = summary_file.readlines()\n",
+    "            time_ns = int(summary_txt[6].split(':')[1].strip())\n",
+    "            time_ms = time_ns * 1e-6\n",
+    "        benchmark_dict = object_detection_benchmarks.get(benchmark)\n",
+    "        if benchmark_dict:\n",
+    "            width = benchmark_dict['width']\n",
+    "            height = benchmark_dict['height']\n",
+    "        else:\n",
+    "            if benchmark.endswith('96'):\n",
+    "                side = 96\n",
+    "            elif benchmark.endswith('128'):\n",
+    "                side = 128\n",
+    "            elif benchmark.endswith('160'):\n",
+    "                side = 160\n",
+    "            elif benchmark.endswith('192'):\n",
+    "                side = 192\n",
+    "            else:\n",
+    "                side = 224\n",
+    "            width = side\n",
+    "            height = side\n",
+    "\n",
+    "        result = '{},{},{},{},'.format(division,submitter,task,system)\n",
+    "        if task=='image-classification':\n",
+    "            result += '{:.01f},,'.format(time_ms)\n",
+    "            result += '{:.03f},,'.format(accuracy_pc)\n",
+    "        elif task=='object-detection':\n",
+    "            result += ',{:.01f},'.format(time_ms)\n",
+    "            result += ',{:.03f},'.format(accuracy_pc)\n",
+    "            \n",
+    "        system_list = system.split('-')\n",
+    "        # CPU.\n",
+    "        hostname_to_cpu = {\n",
+    "            'velociti'  : 'Intel Xeon CPU E5-2650 v3',\n",
+    "            'firefly'   : 'Rockchip RK3399',\n",
+    "            'hikey960'  : 'HiSilicon Kirin960',\n",
+    "            'mate10pro' : 'HiSilicon Kirin970',\n",
+    "            'rpi4'      : 'Broadcom BCM2711B0',\n",
+    "        }\n",
+    "        cpu = hostname_to_cpu[system_list[0]]\n",
+    "        # Accelerator.\n",
+    "        if system_list[0]=='velociti' and system_list[3]!='cpu':\n",
+    "            accelerator = 'NVIDIA GeForce GTX 1080'\n",
+    "        elif system_list[0]=='firefly' and system_list[1]=='armnn' and system_list[3]=='opencl':\n",
+    "            accelerator = 'Arm Mali-T860 MP4'\n",
+    "        elif system_list[0]=='hikey960' and system_list[1]=='armnn' and system_list[3]=='opencl':\n",
+    "            accelerator = 'Arm Mali-G71 MP8'\n",
+    "        elif system_list[0]=='mate10pro' and system_list[1]=='armnn' and system_list[3]=='opencl':\n",
+    "            accelerator = 'Arm Mali-G72 MP12'\n",
+    "        else:\n",
+    "            accelerator = '-'\n",
+    "        # Software.\n",
+    "        if system_list[1]=='armnn':\n",
+    "            if system_list[3]=='neon': \n",
+    "                software = 'ArmNN v19.08 (Neon)'\n",
+    "            else:\n",
+    "                software = 'ArmNN v19.08 (OpenCL)'\n",
+    "        elif system_list[1]=='tensorflow':\n",
+    "            if system_list[3]=='cpu':\n",
+    "                software = 'TensorFlow v1.14.0 (CPU)'\n",
+    "            elif system_list[3]=='cuda':\n",
+    "                software = 'TensorFlow v1.14.0 (CUDA 10.1)'\n",
+    "            elif system_list[3]=='tensorrt':\n",
+    "                if len(system_list)==5:\n",
+    "                    software = 'TensorFlow 1.14.0 (TensorRT 5.1.5 in dynamic mode)'\n",
+    "                else:\n",
+    "                    software = 'TensorFlow 1.14.0 (TensorRT 5.1.5 in static mode)'\n",
+    "        elif system_list[1]=='tflite':\n",
+    "            if system_list[0]=='mate10pro':\n",
+    "                software = 'TFLite v1.13.1'\n",
+    "            else:\n",
+    "                software = 'TFLIte v1.15.0-rc2'\n",
+    "        \n",
+    "        notes = '{}; WxH={}x{}'.format(benchmark, width, height)\n",
+    "        \n",
+    "        result += '{},{},{},{}'.format(cpu, accelerator, software, notes)\n",
+    "        \n",
+    "        results.append(result)\n",
+    "\n",
+    "with open('dividiti-open-results.csv', 'w') as results_file:\n",
+    "    results_file.write('\\n'.join(results))"
+   ]
   }
  ],
  "metadata": {
