Join all open object detection repos.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -48,6 +48,7 @@
     "  1. [Linaro HiKey960](#templates_hikey960)\n",
     "  1. [Huawei Mate 10 Pro](#templates_mate10pro)\n",
     "  1. [Raspberry Pi 4](#templates_rpi4)\n",
+    "  1. [HP Z640](#templates_velociti)\n",
     "  1. [Default](#templates_default)\n",
     "1. [Systems](#systems)\n",
     "1. [Implementations](#implementations)\n",
@@ -1666,7 +1667,7 @@
     "]\n",
     "\n",
     "#\n",
-    "# Object Detection - Open (TensorFlow model zoo + YOLO-v3)\n",
+    "# Object Detection - Open (TensorFlow Model Zoo + YOLO-v3)\n",
     "#\n",
     "repos_object_detection_open = [\n",
     "    # velociti\n",
@@ -2071,12 +2072,10 @@
     "submitter = 'dividiti'\n",
     "\n",
     "#repos = repos_merged\n",
-    "repos = [\n",
-    "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "    #'mlperf-inference-vision-experiments.cpu_cuda'\n",
-    "    #'mlperf-inference-vision-experiments.tensorrt'\n",
-    "    'mlperf-inference-vision-experiments.tensorrt-yolo'\n",
-    "]\n",
+    "# repos = [\n",
+    "#     # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
+    "# ]\n",
+    "repos = repos_object_detection_open\n",
     "for repo_uoa in repos:\n",
     "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
     "    \n",
