Support audit TEST01.

--- a/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
+++ b/jnotebook/mlperf-inference-v0.5/dividiti.ipynb
@@ -895,12 +895,13 @@
    "source": [
     "implementation_paths = {}\n",
     "for implementation in [ 'image-classification-tflite', 'image-classification-armnn-tflite', 'mlperf-inference-vision' ]:\n",
+    "    implementation_uoa = implementation\n",
     "    if implementation.startswith('image-classification'):\n",
-    "        implementation+='-loadgen'\n",
+    "        implementation_uoa += '-loadgen'\n",
     "        repo_uoa = 'ck-mlperf'\n",
     "    else: # TODO: move to ck-mlperf, then no need for special case.\n",
     "        repo_uoa = 'ck-object-detection'\n",
-    "    r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':'program', 'data_uoa':implementation})\n",
+    "    r = ck.access({'action':'find', 'repo_uoa':repo_uoa, 'module_uoa':'program', 'data_uoa':implementation_uoa})\n",
     "    if r['return']>0:\n",
     "        print('Error: %s' % r['error'])\n",
     "        exit(1)\n",
@@ -937,7 +938,7 @@
     "## Links\n",
     "- [Bash script](https://github.com/ctuning/ck-mlperf/tree/master/script/mlperf-inference-v0.5.{}.image-classification) used to invoke benchmarking on Linux systems or Android devices.\n",
     "'''.format(division_upper, division_lower)\n",
-    "    \n",
+    "\n",
     "    \n",
     "task = 'object-detection'\n",
     "for division_upper in [ 'Closed', 'Open' ]:\n",
@@ -1723,9 +1724,9 @@
    "outputs": [],
    "source": [
     "# Locate upstream master.\n",
-    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
-    "# # Locate variation with submission checker fixes.\n",
-    "# r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.pr511'})\n",
+    "# r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.master'})\n",
+    "# Locate variation with audit test fixes.\n",
+    "r = ck.access({'action':'locate', 'module_uoa':'env', 'tags':'mlperf,inference,source,upstream.pr518'})\n",
     "if r['return']>0:\n",
     "    print('Error: %s' % r['error'])\n",
     "    exit(1)\n",
@@ -1742,7 +1743,7 @@
    },
    "outputs": [],
    "source": [
-    "def check_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None):\n",
+    "def check_experimental_results(repo_uoa, module_uoa='experiment', tags='mlperf', submitter='dividiti', path=None, audit=False):\n",
     "    if not path:\n",
     "        path_list = !ck find repo:$repo_uoa\n",
     "        path = path_list[0]\n",
@@ -1788,8 +1789,15 @@
     "            else:\n",
     "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"performance\" ]\n",
     "                (_, division, task, platform, library, benchmark, scenario, mode) = tags\n",
+    "        elif 'audit' in tags: # As accuracy but with the test name instead of the preprocessing method.\n",
+    "            if 'neon' in tags or 'opencl' in tags:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"armnn-v19.08\", \"neon\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"audit\", \"TEST03\" ]\n",
+    "                (_, division, task, platform, library, backend, benchmark, scenario, mode, test) = tags\n",
+    "            else:\n",
+    "                # Expected format: [ \"mlperf\", \"open\", \"image-classification\", \"firefly\", \"tflite-v1.15\", \"mobilenet-v1-0.5-128\", \"singlestream\", \"audit\", \"TEST03\" ]\n",
+    "                (_, division, task, platform, library, benchmark, scenario, mode, test) = tags\n",
     "        else:\n",
-    "            raise \"Expected 'accuracy' or 'performance' in tags!\"\n",
+    "            raise \"Expected 'accuracy' or 'performance' or 'audit' in tags!\"\n",
     "\n",
     "        organization = submitter\n",
     "\n",
@@ -1964,6 +1972,36 @@
     "        if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
     "        mode_dir = os.path.join(scenario_dir, mode)\n",
     "        if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
+    "        \n",
+    "        if audit:\n",
+    "            # Save accuracy and performance dirs for the corresponding experiments.\n",
+    "            accuracy_dir = os.path.join(scenario_dir, 'accuracy')\n",
+    "            performance_dir = os.path.join(scenario_dir, 'performance', 'run_1')\n",
+    "            \n",
+    "            # Only deal with audit test 01 for now.\n",
+    "            if 'TEST01' not in tags:\n",
+    "                continue\n",
+    "\n",
+    "            if 'TEST03' in tags:\n",
+    "                mode = 'accuracy'\n",
+    "            else:\n",
+    "                mode = 'performance'\n",
+    "                \n",
+    "            # Create a similar directory structure to results_dir, with just one more level, test_dir,\n",
+    "            # between scenario_dir and mode_dir.\n",
+    "            audit_dir = os.path.join(organization_dir, 'audit')\n",
+    "            if not os.path.exists(audit_dir): os.mkdir(audit_dir)\n",
+    "            system_dir = os.path.join(audit_dir, system)\n",
+    "            if not os.path.exists(system_dir): os.mkdir(system_dir)\n",
+    "            benchmark_dir = os.path.join(system_dir, benchmark)\n",
+    "            if not os.path.exists(benchmark_dir): os.mkdir(benchmark_dir)\n",
+    "            scenario_dir = os.path.join(benchmark_dir, scenario)\n",
+    "            if not os.path.exists(scenario_dir): os.mkdir(scenario_dir)\n",
+    "            test_dir = os.path.join(scenario_dir, test)\n",
+    "            if not os.path.exists(test_dir): os.mkdir(test_dir)\n",
+    "            mode_dir = os.path.join(test_dir, mode)\n",
+    "            if not os.path.exists(mode_dir): os.mkdir(mode_dir)\n",
+    "\n",
     "        # For each point (should be one point for each performance run).\n",
     "        points = r['points']\n",
     "        for (point, point_idx) in zip(points, range(1,len(points)+1)):\n",
@@ -1999,7 +2037,7 @@
     "                detail_txt_file.writelines(detail)\n",
     "                print('  |_ %s' % detail_txt_name)\n",
     "            # Accuracy file (with accuracy dictionary).\n",
-    "            # FIXME: Move the next 5 lines into the (if mode == 'accuracy') block,\n",
+    "            # TODO: Move the next 5 lines into the (if mode == 'accuracy') block,\n",
     "            # once the submission checker no longer complains as follows:\n",
     "            # \"performance/run_1 has file list mismatch (['mlperf_log_accuracy.json'])\"\n",
     "            accuracy_json_name = 'mlperf_log_accuracy.json'\n",
@@ -2007,6 +2045,28 @@
     "            with open(accuracy_json_path, 'w') as accuracy_json_file:\n",
     "                json.dump(mlperf_log.get('accuracy',{}), accuracy_json_file, indent=2)\n",
     "                print('  |_ %s' % accuracy_json_name)\n",
+    "            # Do what's required by NVIDIA's audit tests.\n",
+    "            if audit and 'TEST01' in tags:\n",
+    "                test_path = os.path.join(upstream_path, 'v0.5', 'audit', 'nvidia', test)\n",
+    "                # Verify that the accuracy (partially) dumped for the audit test matches that for the submision.\n",
+    "                verify_accuracy_py = os.path.join(test_path, 'verify_accuracy.py')\n",
+    "                submission_accuracy_json_path = os.path.join(accuracy_dir, accuracy_json_name)\n",
+    "                verify_accuracy_txt = !python3 $verify_accuracy_py -a $submission_accuracy_json_path -p $accuracy_json_path\n",
+    "                verify_accuracy_txt_name = 'verify_accuracy.txt'\n",
+    "                verify_accuracy_txt_path = os.path.join(test_dir, verify_accuracy_txt_name)\n",
+    "                with open(verify_accuracy_txt_path, 'w') as verify_accuracy_txt_file:\n",
+    "                    verify_accuracy_txt_file.writelines('\\n'.join(verify_accuracy_txt))\n",
+    "                # Verify that the performance for the audit test matches that for the submission.\n",
+    "                verify_performance_py = os.path.join(test_path, 'verify_performance.py')\n",
+    "                submission_summary_txt_path = os.path.join(performance_dir, summary_txt_name)\n",
+    "                verify_performance_txt = !python3 $verify_performance_py -r $submission_summary_txt_path -t $summary_txt_path\n",
+    "                verify_performance_txt_name = 'verify_performance.txt'\n",
+    "                verify_performance_txt_path = os.path.join(test_dir, verify_performance_txt_name)\n",
+    "                with open(verify_performance_txt_path, 'w') as verify_performance_txt_file:\n",
+    "                    verify_performance_txt_file.writelines('\\n'.join(verify_performance_txt))\n",
+    "                # Skip the rest of the loop.\n",
+    "                continue\n",
+    "            # Generate accuracy.txt and submission_checklist.txt.\n",
     "            if mode == 'accuracy':\n",
     "                accuracy_txt_name = 'accuracy.txt'\n",
     "                accuracy_txt_path = os.path.join(last_dir, accuracy_txt_name)\n",
@@ -2072,12 +2132,14 @@
     "submitter = 'dividiti'\n",
     "\n",
     "#repos = repos_merged\n",
-    "# repos = [\n",
-    "#     # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
-    "# ]\n",
-    "repos = repos_object_detection_open\n",
+    "repos = [\n",
+    "    # 'mlperf.open.image-classification.hikey960.fix-min-duration', # NB: results NOT yet integrated and uploaded to Dropbox\n",
+    "    'mlperf.closed.image-classification.rpi4.audit'\n",
+    "]\n",
+    "# repos = repos_object_detection_open\n",
     "for repo_uoa in repos:\n",
-    "    check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
+    "#     check_experimental_results(repo_uoa, path=path, submitter=submitter)\n",
+    "    check_experimental_results(repo_uoa, path=path, submitter=submitter, audit=True)\n",
     "    \n",
     "print(\"*\" * 100)\n",
     "submission_checker_py = os.path.join(upstream_path, 'v0.5', 'tools', 'submission', 'submission-checker.py')\n",
